--- a/Pertemuan1/cssJadwal.css
+++ b/Pertemuan1/cssJadwal.css
@@ -1,3 +1,36 @@
+* {
+  padding: 0px;
+}
+
 table, thead, tr, th, td {
     border: 1px solid black;
   }
+
+th {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+.hari {
+  text-align: center;
+}
+
+td {
+  text-align: center;
+  padding-right: 3px;
+  padding-left: 3px;
+}
+
+.judul{
+  text-align: center;
+}
+
+.quotes{
+  padding-top: 50px;
+}
+
+.kedua {
+  padding-top: 40px;
+}
